feature(MenuButton): new methods for search items:
1. findById();
2. findByTextId();
3. findMenuById();
4. findMenuByTextId();
5. getById();
6. getByTextId();
7. getMenuById();
8. getMenuByTextId();